# dreamaxis

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  labels.json
apps/browser-worker/: Dockerfile  pyproject.toml
apps/browser-worker/app/: main.py
apps/browser-worker/app/core/: config.py  security.py
apps/browser-worker/app/services/: browser_executor.py  environment_probe.py  runtime_client.py
apps/desktop-worker/: Dockerfile  pyproject.toml
apps/desktop-worker/app/: main.py
apps/desktop-worker/app/core/: config.py  security.py
apps/desktop-worker/app/services/: desktop_executor.py  runtime_client.py
docs/: acceptance-report-alpha2.md  architecture.md  backend-api.md  browser-runtime.md  chat-acceptance-report-nvidia.md  chat-acceptance-report-v0.2.md  deployment-modes.md  desktop-host-validation-2026-03-24.md  desktop-runtime-v1.md  development.md  doctor.md  environment-standard.md  github-labels.md  github-maintainer-guide.md  github-release-template.md  github-release-v0.1.0.md  github-release-v0.2.0-preview.md  github-release-v0.3.0-alpha.2.md  github-repo-metadata.md  knowledge-packs.md  notebooklm-evaluation.md  nvidia-provider-setup.md  release-checklist.md  repo-copilot-runbook.md  screenshots.md  skill-packs.md  skill-requirements.md  v0.2-next-round-plan.md  v0.3-desktop-operator-plan.md  vnext-desktop-operator-first-plan.md
scripts/: reset-local-demo.ps1  reset-local-demo.py  (+6 more)
(+207 files in other folders)
