[project]
name = "dreamaxis-browser-worker"
version = "0.1.0"
description = "DreamAxis browser runtime worker"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "playwright>=1.58.0",
  "pydantic-settings>=2.10.1",
  "uvicorn[standard]>=0.35.0"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
